--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
               list="suggestions"
             />
             <select class="country" id="countries-from-select">
-              <option value="dollar">Dollar</option>
-              <option value="cuban-peso">Cuban peso</option>
-              <option value="euro">Euro</option>
+              <option value="USD">American Dollar</option>
+              <option value="CUP">Cuban peso</option>
+              <option value="EUR">Euro</option>
             </select>
             <datalist class="country" id="suggestions">
-              <option value="dollar">$</option>
-              <option value="cuban-peso">$</option>
-              <option value="euro">€</option>
+              <option value="USD">$</option>
+              <option value="CUP">$</option>
+              <option value="EUR">€</option>
             </datalist>
           </div>
           <div class="country-containerII">
@@ -52,9 +52,9 @@
               list="suggestions"
             />
             <select class="country" id="countries-to-select">
-              <option value="dollar">Dollar</option>
-              <option value="cuban-peso">Cuban peso</option>
-              <option value="euro">Euro</option>
+              <option value="USD">American Dollar</option>
+              <option value="CUP">Cuban peso</option>
+              <option value="EUR">Euro</option>
             </select>
           </div>
           <div class="float-left-flag-container">
