added function to add currency

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
         <button type="submit" class="btn" id="btn">Convert</button>
       </div>
     </div>
+    <button type="button" class="btn" id="add-currency">Add Currency</button>
+    <input type="text" placeholder="insert new currency" id="new-currency-input">
+    <input type="text" placeholder="insert new currency rate" id="new-currency-rate-input">
+  </div>
+    </div>
   </body>
   <script src="script.js"></script>
 </html>
