added database file and changed logic, now works better

--- a/index.html
+++ b/index.html
@@ -84,10 +84,12 @@
       </div>
     </div>
     <button type="button" class="btn" id="add-currency">Add Currency</button>
-    <input type="text" placeholder="insert new currency" id="new-currency-input">
-    <input type="text" placeholder="insert new currency rate" id="new-currency-rate-input">
+    <input type="text" placeholder="insert new currency*" id="new-currency-input" required>
+    <input type="text" placeholder="insert new currency rate*" id="new-currency-rate-input" required>
+    <input type="text" placeholder="insert new currency symbol" id="new-currency-symbol-input">
+    
   </div>
     </div>
   </body>
-  <script src="script.js"></script>
+  <script type="module"   src="script.js"></script>
 </html>
