expanded flags and countries

--- a/index.html
+++ b/index.html
@@ -34,13 +34,29 @@
             />
             <select class="country" id="countries-from-select">
               <option value="USD">American Dollar</option>
-              <option value="CUP">Cuban peso</option>
-              <option value="EUR">Euro</option>
+  <option value="CUP">Cuban Peso</option>
+  <option value="EUR">Euro</option>
+  <option value="GBP">British Pound</option>
+  <option value="JPY">Japanese Yen</option>
+  <option value="AUD">Australian Dollar</option>
+  <option value="CAD">Canadian Dollar</option>
+  <option value="CHF">Swiss Franc</option>
+  <option value="CNY">Chinese Yuan</option>
+  <option value="SEK">Swedish Krona</option>
+  <option value="NZD">New Zealand Dollar</option>
             </select>
             <datalist class="country" id="suggestions">
               <option value="USD">$</option>
-              <option value="CUP">$</option>
-              <option value="EUR">€</option>
+  <option value="CUP">$</option>
+  <option value="EUR">€</option>
+  <option value="GBP">£</option>
+  <option value="JPY">¥</option>
+  <option value="AUD">$</option>
+  <option value="CAD">$</option>
+  <option value="CHF">CHF</option>
+  <option value="CNY">¥</option>
+  <option value="SEK">kr</option>
+  <option value="NZD">$</option>
             </datalist>
           </div>
           <div class="country-containerII">
@@ -53,8 +69,16 @@
             />
             <select class="country" id="countries-to-select">
               <option value="USD">American Dollar</option>
-              <option value="CUP">Cuban peso</option>
+              <option value="CUP">Cuban Peso</option>
               <option value="EUR">Euro</option>
+              <option value="GBP">British Pound</option>
+              <option value="JPY">Japanese Yen</option>
+              <option value="AUD">Australian Dollar</option>
+              <option value="CAD">Canadian Dollar</option>
+              <option value="CHF">Swiss Franc</option>
+              <option value="CNY">Chinese Yuan</option>
+              <option value="SEK">Swedish Krona</option>
+              <option value="NZD">New Zealand Dollar</option>
             </select>
           </div>
           <div class="float-left-flag-container">
