--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               <option value="USD">American Dollar</option>
   <option value="CUP">Cuban Peso</option>
   <option value="EUR">Euro</option>
+  <option value="DKK">Danish Krone</option>
   <option value="GBP">British Pound</option>
   <option value="JPY">Japanese Yen</option>
   <option value="AUD">Australian Dollar</option>
@@ -48,6 +49,7 @@
               <option value="USD">$</option>
   <option value="CUP">$</option>
   <option value="EUR">€</option>
+  <option value="DKK">DKK</option>
   <option value="GBP">£</option>
   <option value="JPY">¥</option>
   <option value="AUD">$</option>
@@ -86,6 +88,7 @@
               <option value="USD">American Dollar</option>
               <option value="CUP">Cuban Peso</option>
               <option value="EUR">Euro</option>
+              <option value="DKK">Danish Krone</option>
               <option value="GBP">British Pound</option>
               <option value="JPY">Japanese Yen</option>
               <option value="AUD">Australian Dollar</option>
