--- a/index.html
+++ b/index.html
@@ -126,6 +126,16 @@
           id="new-currency-symbol-input"
         />
       </div>
+
+      <div id="grid-container">
+        <h1>Rates to other currencies</h1>
+        <div class="currency-grid" id="currencies-grid">
+          <div class="grid-header">Base</div>
+          <div class="grid-header">To</div>
+          <div class="grid-header">Rate</div>
+
+         
+      </div>
     </div>
 
     <script type="module" src="script.js"></script>
