--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
          
       </div>
     </div>
-
+    <div class="tradingview-widget-container">
+      <div id="tradingview_12345"></div>
+      <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  
     <script type="module" src="script.js"></script>
   </body>
 </html>
