added a little bell

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           </div>
 
           <div id="result-container">
+            <span class="bell" id="bell"><h5 class="bell-text">create alert</h5>&#x1F514;</span>  
             <h1 id="result-text">Result:</h1>
           </div>
 
@@ -140,8 +141,9 @@
     </div>
     <div class="market-open"> 
     <div class="glowing-circle" id="glowing-circle"></div>
-    <h5 id="glowing-circle-text">The CPH Market Status</h5>
+    <h5 id="glowing-circle-text">The Market Status</h5>
   </div>
+ 
     <div class="tradingview-widget-container">
       <div id="tradingview_12345"></div>
       <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
