improvements css, currency names

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 list="suggestions"
               />
               <select class="country" id="countries-from-select">
-                <option value="USD">American Dollar  <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
+                <option value="USD" >American Dollar  <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
                 <option value="CUP">Cuban Peso <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
                 <option value="EUR">Euro <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
-                <option value="DKK">Danish Krone <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
+                <option value="DKK" selected="selected">Danish Krone <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
                 <option value="GBP">British Pound <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</option>
                 <option value="JPY">Japanese Yen <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
                 <option value="AUD">Australian Dollar <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
@@ -80,8 +80,8 @@
               <select class="country" id="countries-to-select">
                 <option value="USD">American Dollar <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
                 <option value="CUP">Cuban Peso <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
-                <option value="EUR">Euro <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
-                <option value="DKK">Danish Krone <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
+                <option value="EUR" selected="selected">Euro <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
+                <option value="DKK" >Danish Krone <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
                 <option value="GBP">British Pound <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
                 <option value="JPY">Japanese Yen <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
                 <option value="AUD">Australian Dollar <span class="yellow-star" style="font-size: 24px; color: yellow;">&#9733;</span></option>
