added switch button and logic

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
               </div>
             </div>
           </div>
+          
+          <div class="switch" id="switch-currency-button">
+          <input id="switch-input"type="submit" name="" value="">
+        </div>
+
 
           <div class="country-container">
             <legend class="legend" id="to-tag">To:</legend>
