added localstorage logic incomplete

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <nav class="nav"><hr />
+      <div>
       <h1 class="allText">Alejandro's Currency Converter</h1>
+      <h6 class="little-text">with real rates</h6></div>
       <hr /></nav>
     
 
@@ -103,7 +105,7 @@
           </div>
 
           <div id="result-container">
-            <span class="bell" id="bell"><h5 class="bell-text">create alert</h5>&#x1F514;</span>  
+            <span class="bell" id="bell" ><h5 class="bell-text">create alert</h5>&#x1F514;</span>  
             <h1 id="result-text">Result:</h1>
           </div>
 
@@ -148,7 +150,7 @@
     <div class="glowing-circle" id="glowing-circle"></div>
     <h5 id="glowing-circle-text">The Market Status</h5>
   </div>
- 
+  <ul id="alerts-list"></ul>
     <div class="tradingview-widget-container">
       <div id="tradingview_12345"></div>
       <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
