added alert logic incomplete

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <div class="container">
       <div class="main">
         <div class="form">
+          <div class="market-open"> 
+            <div class="glowing-circle" id="glowing-circle"></div>
+            <h5 id="glowing-circle-text">The Market Status</h5>
+          </div>
           <div class="country-container">
             <legend class="legend" id="from-tag">From:</legend>
             <div class="input-container">
@@ -105,7 +109,7 @@
           </div>
 
           <div id="result-container">
-            <span class="bell" id="bell" ><h5 class="bell-text">create alert</h5>&#x1F514;</span>  
+            <span class="bell" id="bell" >&#x1F514;<h5 class="bell-text">create alert</h5></span>  
             <h1 id="result-text">Result:</h1>
           </div>
 
@@ -146,11 +150,8 @@
          
       </div>
     </div>
-    <div class="market-open"> 
-    <div class="glowing-circle" id="glowing-circle"></div>
-    <h5 id="glowing-circle-text">The Market Status</h5>
-  </div>
-  <ul id="alerts-list"></ul>
+    
+  <ul id="alerts-container"></ul>
     <div class="tradingview-widget-container">
       <div id="tradingview_12345"></div>
       <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
