improved alert systen and async functions

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
          
       </div>
     </div>
-    
+    <ul id="saved-alerts-container"></ul>
   <ul id="alerts-container"></ul>
     <div class="tradingview-widget-container">
       <div id="tradingview_12345"></div>
