added responsiveness for small mobile

--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
           id="new-currency-rate-input"
           required
         />
-        <input
+        <!-- <input
           type="text"
           placeholder="insert new currency symbol"
           id="new-currency-symbol-input"
-        />
+        /> -->
       </div>
 
       <div id="grid-container">
