added hour tracker

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
           <div class="market-open"> 
             <div class="glowing-circle" id="glowing-circle"></div>
             <h5 id="glowing-circle-text">The Market Status</h5>
+            <div class="market-hours-indicator">
+              <div class="hours-line">
+                <div class="current-time-marker"></div>
+              </div>
+            </div>
           </div>
+          
           <div class="country-container">
             <legend class="legend" id="from-tag">From:</legend>
             <div class="input-container">
