hour tracking and added footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style2.css" />
+    <link rel="icon" type="image/x-icon" href="/flags/neutral.svg">
     <title>Alejandro Currency Converter</title>
   </head>
   <body>
@@ -161,7 +162,9 @@
     <div class="tradingview-widget-container">
       <div id="tradingview_12345"></div>
       <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-    
+      <footer class="footer">
+        Copyright ag-sound
+      </footer>
     <script type="module" src="script.js"></script>
 
   </body>
