major update -ai -env and corrections

--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
           <div class="grid-header">Rate</div>
         </div>
       </div>
+
       <ul id="saved-alerts-container"></ul>
       <ul id="alerts-container"></ul>
       <div class="tradingview-widget-container">
@@ -335,6 +336,40 @@
           type="text/javascript"
           src="https://s3.tradingview.com/tv.js"
         ></script>
+        <div class="circle-with-text">
+          <div class="circle">
+            <div class="gradient-bg">
+              <svg xmlns="http://www.w3.org/2000/svg">
+                <defs>
+                  <filter id="goo">
+                    <feGaussianBlur
+                      in="SourceGraphic"
+                      stdDeviation="10"
+                      result="blur"
+                    />
+                    <feColorMatrix
+                      in="blur"
+                      mode="matrix"
+                      values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -8"
+                      result="goo"
+                    />
+                    <feBlend in="SourceGraphic" in2="goo" />
+                  </filter>
+                </defs>
+              </svg>
+              <div class="gradients-container">
+                <div class="g1"></div>
+                <div class="g2"></div>
+                <div class="g3"></div>
+                <div class="g4"></div>
+                <div class="g5"></div>
+                <div class="interactive"></div>
+              </div>
+            </div>
+          </div>
+          <div class="text">A.I Insights</div>
+          <ul id="ai-message-container"></ul>
+        </div>
         <footer class="footer">Copyright ag-sound</footer>
         <script type="module" src="script.js"></script>
       </div>
