added forum and fixed currency commas

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         </div>
       </div>
       <!-- ------------------------------------------------ -->
-
+      <div id="disqus_thread"></div>
       <footer class="footer">Copyright Alejandro Gispert 2024</footer>
       <script type="module" src="script.js"></script>
     </div>
