added logo, number colors,and small fixs

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h6 class="little-text">
           Catch the best currency rates with insights and 15 min live updates
         </h6>
+        <img src="./img/logo.svg" alt="triangle logo" id="logo" />
       </div>
       <hr />
     </nav>
@@ -403,6 +404,7 @@
         </div>
       </div>
       <!-- ------------------------------------------------ -->
+
       <div id="disqus_thread"></div>
       <footer class="footer">Copyright Alejandro Gispert 2024</footer>
       <script type="module" src="script.js"></script>
