--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
         <button type="button" class="btn" id="add-currency">
           Add Currency
         </button>
+        <button type="button" class="btn" id="forum-btn">Forum</button>
         <input
           type="text"
           placeholder="insert new currency name*"
@@ -340,6 +341,8 @@
           id="new-currency-symbol-input"
         /> -->
       </div>
+
+      <div id="disqus_thread"></div>
 
       <div id="grid-container">
         <h1>Rates to other currencies</h1>
@@ -405,7 +408,6 @@
       </div>
       <!-- ------------------------------------------------ -->
 
-      <div id="disqus_thread"></div>
       <footer class="footer">Copyright Alejandro Gispert 2024</footer>
       <script type="module" src="script.js"></script>
     </div>
