--- a/index.html
+++ b/index.html
@@ -3,6 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Catch the best currency rates with insights and 15 min live updates. CurrencyCatcher is an app made by Alejandro Gispert"
+    />
+    <meta property="og:image" content="./img/logo.svg" />
+    <meta property="og:image:type" content="image/svg+xml" />
+    <meta property="og:title" content="Currency Catcher" />
+    <meta
+      property="og:description"
+      content="Catch the best currency rates with insights and 15 min live updates.  CurrencyCatcher is an app made by Alejandro Gispert"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://currency-backend.netlify.app/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Currency Catcher" />
+    <meta
+      name="twitter:description"
+      content="Catch the best currency rates with insights and 15 min live updates.  CurrencyCatcher is an app made by Alejandro Gispert"
+    />
+    <meta name="twitter:image" content="./img/logo.svg" />
+
     <link rel="stylesheet" href="style2.css" />
     <link rel="icon" type="image/x-icon" href="/flags/neutral.svg" />
     <link
