including cuban rates1

--- a/index.html
+++ b/index.html
@@ -429,7 +429,20 @@
       </div>
       <!-- ------------------------------------------------ -->
 
-      <footer class="footer">Copyright Alejandro Gispert 2024</footer>
+      <footer class="footer">
+        <p>Copyright tuamigobass@gmail.com 2024</p>
+        <p>
+          International rates by
+          <span>
+            <img src="./img/logo-oxr.png" style="background-color: black"
+          /></span>
+        </p>
+
+        <p>
+          daily cuban rates by
+          <span><img src="./img/toque-logo.png" /></span>
+        </p>
+      </footer>
       <script type="module" src="script.js"></script>
     </div>
   </body>
