adding new function -not ready

--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
         </p>
       </footer>
       <script type="module" src="script.js"></script>
+      <script type="module" src="scriptNumber2.js"></script>
     </div>
   </body>
 </html>
