--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
                     >&#9733;</span
                   >
                 </option>
-                <!-- <option value="CUP">
+                <option value="CUP">
                   Cuban Peso
                   <span
                     class="yellow-star"
                     style="font-size: 24px; color: yellow"
                     >&#9733;</span
                   >
-                </option> -->
+                </option>
                 <option value="EUR">
                   Euro
                   <span
@@ -183,7 +183,7 @@
               </select>
               <datalist class="country" id="suggestions">
                 <option value="USD">$</option>
-                <!-- <option value="CUP">$</option> -->
+                <option value="CUP">$</option>
                 <option value="EUR">€</option>
                 <option value="DKK">DKK</option>
                 <option value="GBP">£</option>
@@ -232,14 +232,14 @@
                     >&#9733;</span
                   >
                 </option>
-                <!-- <option value="CUP">
+                <option value="CUP">
                   Cuban Peso
                   <span
                     class="yellow-star"
                     style="font-size: 24px; color: yellow"
                     >&#9733;</span
                   >
-                </option> -->
+                </option>
                 <option value="EUR" selected="selected">
                   Euro <span
                     class="yellow-star"
