--- a/index.html
+++ b/index.html
@@ -92,14 +92,7 @@
                     >&#9733;</span
                   >
                 </option>
-                <option value="CUP">
-                  Cuban Peso
-                  <span
-                    class="yellow-star"
-                    style="font-size: 24px; color: yellow"
-                    >&#9733;</span
-                  >
-                </option>
+
                 <option value="EUR">
                   Euro
                   <span
@@ -110,6 +103,22 @@
                 </option>
                 <option value="DKK" selected="selected">
                   Danish Krone
+                  <span
+                    class="yellow-star"
+                    style="font-size: 24px; color: yellow"
+                    >&#9733;</span
+                  >
+                </option>
+                <option value="CUP">
+                  Cuban Peso
+                  <span
+                    class="yellow-star"
+                    style="font-size: 24px; color: yellow"
+                    >&#9733;</span
+                  >
+                </option>
+                <option value="MLC">
+                  Moneda Libremente Convertible
                   <span
                     class="yellow-star"
                     style="font-size: 24px; color: yellow"
@@ -184,6 +193,7 @@
               <datalist class="country" id="suggestions">
                 <option value="USD">$</option>
                 <option value="CUP">$</option>
+                <option value="MLC">$</option>
                 <option value="EUR">€</option>
                 <option value="DKK">DKK</option>
                 <option value="GBP">£</option>
@@ -232,14 +242,7 @@
                     >&#9733;</span
                   >
                 </option>
-                <option value="CUP">
-                  Cuban Peso
-                  <span
-                    class="yellow-star"
-                    style="font-size: 24px; color: yellow"
-                    >&#9733;</span
-                  >
-                </option>
+
                 <option value="EUR" selected="selected">
                   Euro <span
                     class="yellow-star"
@@ -249,6 +252,22 @@
                 </option>
                 <option value="DKK">
                   Danish Krone
+                  <span
+                    class="yellow-star"
+                    style="font-size: 24px; color: yellow"
+                    >&#9733;</span
+                  >
+                </option>
+                <option value="CUP">
+                  Cuban Peso
+                  <span
+                    class="yellow-star"
+                    style="font-size: 24px; color: yellow"
+                    >&#9733;</span
+                  >
+                </option>
+                <option value="MLC">
+                  Moneda Libremente Convertible
                   <span
                     class="yellow-star"
                     style="font-size: 24px; color: yellow"
